# mzprof

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: aggregate.rs  main.rs  types.rs
src/collect/: mod.rs  subscribe.rs  wrapper.rs
src/pprof/: mod.rs  profile.proto
