[package]
name = "mzprof"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
flate2 = "1.1.2"
futures = "0.3.31"
protobuf = "3.7.2"
serde_json = "1.0.140"

[dependencies.clap]
version = "4.5.40"
features = ["derive"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-native-tls", "postgres", "rust_decimal"]

[dependencies.tokio]
version = "1.45.1"
features = ["rt-multi-thread", "macros"]

[build-dependencies]
protobuf-codegen = "3.7.2"
